# tplat

./: .bazelrc  .gitignore  404.html  BUILD.anyhow.bazel  MODULE.bazel  en.search-data.min.5bcfedff173d46fb6e197feeb6be9aa76fc3e7d51bb3109dd7864af17ff98945.json  en.search.min.ef460525f3f3a1cde3dc672b08f9657b67fdd3327432b692f0131ecfb86416fa.js  index.html  index.xml  manifest.json  package.json  sitemap.xml
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=  npm_translate_lock_MTc4ODA1MTI0Nw==
.github/workflows/: docs.yml  premerge.yml
categories/: index.html  index.xml
docs/: BUILD  index.html  index.xml
docs/projects_cryptography_docs_docs.output/: index.html  index.xml
docs/projects_cryptography_docs_docs.output/foundational/: index.html
docs/projects_cryptography_docs_docs.output/projects_cryptography_cryptography_asymmetric_docs_docs.output/: index.html  index.xml
docs/projects_cryptography_docs_docs.output/projects_cryptography_cryptography_asymmetric_docs_docs.output/projects_cryptography_cryptography_asymmetric_ecc_docs_docs.output/: index.html  index.xml
docs/projects_cryptography_docs_docs.output/projects_cryptography_cryptography_symmetric_docs_docs.output/: index.html  index.xml
docs/projects_fpga_docs_docs.output/: index.html  index.xml
docs/projects_fpga_docs_docs.output/clock-division/: index.html
docs/projects_fpga_docs_docs.output/full-adder/: index.html
docs/projects_fpga_docs_docs.output/hazards/: index.html
docs/projects_fpga_docs_docs.output/mux/: index.html
docs/projects_fpga_docs_docs.output/overflow-counter/: index.html
docs/projects_fpga_docs_docs.output/seven-segment-display/: index.html
docs/projects_fpga_docs_docs.output/verilog/: index.html
docs/projects_translate_docs_docs.output/: index.html  index.xml
docs/projects_translate_docs_docs.output/projects_budget_docs_docs.output/: Transactions_2022-12-01_2023-05-03.csv  index.html  index.xml
docs/projects_translate_docs_docs.output/projects_budget_docs_docs.output/docs/: index.html
docs/projects_translate_docs_docs.output/translate_srt/: index.html
docs/test/: index.html
projects/budget/: BUILD.bazel
projects/budget/budget/: __init__.py  main.py
projects/budget/docs/: BUILD  index.md
projects/budget/docs/data/: BUILD.bazel
projects/budget/test/: BUILD  BUILD.bazel  test.py
projects/cpp/: BUILD
projects/cryptography/: BUILD
projects/cryptography/cryptography/: __init__.py
projects/cryptography/docs/: BUILD  foundational.md  index.md  polyalphabetic.md
projects/digitalcomms/docs/: BUILD  index.md  modulation.md
projects/docs/: BUILD  index.md  test.md
projects/fpga/docs/: BUILD  clock-division.md  full-adder.md  hazards.md  index.md  mux.md  overflow-counter.md  seven-segment-display.md  verilog.md
projects/hello_world/c/: BUILD
projects/hello_world/cpp/: BUILD  main.cpp
projects/hello_world/js/: BUILD  main.js  test.js
projects/hello_world/python/: BUILD  main.py  test.py
projects/hello_world/ruby/: BUILD  lib.rb  main.rb  test.rb
projects/hello_world/rust/: BUILD  Cargo.toml  lib.rs  main.rs
projects/hugo/site_simple/: BUILD.bazel
projects/ios/: BUILD
projects/ios/cli/: demo.rs  main_lib.m
projects/ios/gui/: BUILD  ContentView.swift  Info.plist  RustBridge.h  demo.rs  main_lib.m
projects/linux/: BUILD  commands.md  descriptors.md  distros.md  index.md  permissions.md  regex.md  ssh.md
projects/linux/shell/: BUILD  index.md  prompt.md
projects/linux/vim/: BUILD  index.md
projects/math/docs/: BUILD  index.md
projects/poker/: BUILD  BUILD.bazel
projects/poker/test/: BUILD  BUILD.bazel
projects/qr/: BUILD  BUILD.bazel
projects/qr/docs/data/: BUILD.bazel
projects/skyscanner/skyscanner/: main.py  opensky.py  roi.py
projects/threat_modelling/atlas/: ATLAS.md  BUILD  EXECPLAN.md  README.md  THREATS.md
projects/threat_modelling/data/: BUILD
projects/threat_modelling/docs/: BUILD  foundational.md  index.md
projects/translate/: BUILD  BUILD.bazel
projects/translate/docs/: BUILD  index.md  translate_srt.md
projects/translate/docs/data/: BUILD.bazel
projects/translate/test/: BUILD.bazel
projects/translate/test/data/: BUILD
projects/translate/translate/: main.py
rules/: doc.bzl  notes.md
rules/detail/: BUILD  Gemfile  _config.yml  _deterministic_tar_cmd.bzl  _doc_providers.bzl  _doc_section_args.bzl  _doc_site_args.bzl  _doc_site_stage.bzl  _doc_site_stage_content.bzl  doc_publish.bzl  doc_section.bzl  doc_site_build.bzl  doc_site_serve.bzl  query_targets.sh  tplat_doc.bzl
rules/detail/doc/: _doc_providers.bzl  _doc_section_args.bzl  _doc_site_args.bzl  doc_menu_item.bzl  doc_publish.bzl  doc_section.bzl  doc_site_build.bzl
rules/detail/markdownlint_cli/: BUILD  markdownlint_cli.mjs  style.json
rules/detail/markdownlint_cli2/: BUILD  markdownlint_cli2.mjs
rules/detail/mdl/: BUILD  mdl.bzl  style.rb
rules/utils/: BUILD.bazel  jekyll_site.py  jekyll_site_formatter.py
tags/: index.html  index.xml
toolchains/cpp/: BUILD  toolchain_config.bzl
toolchains/cpp/darwin/: toolchain_config.bzl
toolchains/cpp/linux/: BUILD  toolchain_config.bzl
toolchains/cpp/windows/: BUILD  toolchain_config.bzl
toolchains/hugo/: BUILD  com_github_alex_shpak_hugo_book.patch  com_github_thegeeklab_hugo_geekdoc.patch  hugo.MODULE.bazel  rules_hugo.patch  rules_hugo_extension.patch  rules_hugo_geekdoc.patch  rules_hugo_module.patch  rules_hugo_repository.patch  rules_hugo_site.patch  rules_hugo_theme.patch
toolchains/js/: .npmrc  js.MODULE.bazel  package.json  pnpm-lock.yaml  rules_js.patch
toolchains/nodejs/: nodejs.MODULE.bazel
toolchains/python/: BUILD.bazel  python.MODULE.bazel  requirements3.in  requirements3_darwin.in  requirements3_darwin.txt  requirements3_linux.txt  requirements3_windows.in  requirements3_windows.txt  venv_extension.bzl
toolchains/ruby/: BUILD  Gemfile  ruby.MODULE.bazel
toolchains/rust/: BUILD  Cargo.toml  extension.bzl  rust.MODULE.bazel
toolchains/rust/crates/: BUILD.anyhow-1.0.101.bazel  BUILD.bazel  crates.bzl  defs.bzl
(+127 files in other folders)
