# Specify information about the current module, including its name, metadata, and so on...
module(
    name = "tplat",
    version = "1.0.0",  # Bazel does not enforce any specific version format...
)

# Specify direct dependencies on other Bazel modules
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_uv", version = "0.89.2")
bazel_dep(name = "rules_multirun", version = "0.13.0")

# Directives related to module extensions
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.77"
)
crate.from_specs(
    name = "crates",
    cargo_lockfile = "//toolchains/rust:Cargo.lock",
    supported_platform_triples = [
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "x86_64-pc-windows-msvc",
    ],
)
use_repo(crate, "crates")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    download_only = True,
    hub_name = "pypi",
    python_version = "3.12",
    requirements_darwin = "//toolchains/python:requirements3_darwin.txt",
    requirements_linux = "//toolchains/python:requirements3_linux.txt",
    requirements_windows = "//toolchains/python:requirements3_windows.txt",
)
use_repo(pip, "pypi")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
    tag = "latest",
)
oci.pull(
    name = "distroless_python_312",
    image = "gcr.io/distroless/python3-debian12",
    platforms = ["linux/amd64"],
    tag = "3.12",
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_python_312", "distroless_python_312_linux_amd64")

# Register toolchains
register_toolchains(
    "//toolchains/cpp:darwin_x86_64_toolchain",
    "//toolchains/cpp:linux_x86_64_toolchain",
    "//toolchains/cpp:windows_x86_64_toolchain",
    "@rust_toolchains//:all",
    "@python_versions//:all",
)
