load("@rules_python//python:defs.bzl", "py_library", "py_wheel")

# Defining a python library. We will package this library as a wheel
py_library(
    name = "budget", 
    deps = [
        "@py3_deps//pandas:pkg",
        "@py3_deps//pytest:pkg",
    ], 
    srcs = [
        "budget/__init__.py",
        "budget/main.py",
    ], 
    imports = ["."],
    visibility = ["//visibility:public"],
)

# Package some specific py_library targets, without their dependencies
py_wheel(
    name = "budget_whl",
    # Package data. We're building "budget-1.0.0-py3-none-any.whl"
    distribution = "budget",
    python_tag = "py3",
    version = "1.0.0",
    deps = [
        ":budget",
    ],
    strip_path_prefixes = ["projects/budget",],
)
    