load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_wheel")

# Defining a python library. We will package this library as a wheel
py_library(
    name = "budget",
    srcs = [
        "budget/__init__.py",
        "budget/main.py",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("pandas"),
    ],
)

# Package some specific py_library targets, without their dependencies
py_wheel(
    name = "budget_whl",
    # Package data. We're building "budget-1.0.0-py3-none-any.whl"
    distribution = "budget",
    python_tag = "py3",
    strip_path_prefixes = ["projects/budget"],
    version = "1.0.0",
    deps = [
        ":budget",
    ],
)
