load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library", "py_wheel")

# Defining a python library. We will package this library as a wheel
py_library(
    name = "poker",
    srcs = [
        "poker/__init__.py",
        "poker/main.py",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        requirement("pandas"),
        requirement("scipy"),
    ],
)

# Package some specific py_library targets, without their dependencies
py_wheel(
    name = "poker_whl",
    # Package data. We're building "poker-1.0.0-py3-none-any.whl"
    distribution = "poker",
    python_tag = "py3",
    strip_path_prefixes = ["projects/poker"],
    version = "1.0.0",
    deps = [
        ":poker",
    ],
)
