load("@rules_python//python:defs.bzl", "py_library", "py_wheel")

# Defining a python library. We will package this library as a wheel
py_library(
    name = "qr", 
    deps = [
        "@py3_deps//qrcode:pkg"
    ], 
    srcs = [
        "main.py",
    ], 
    imports = ["."],
    visibility = ["//visibility:public"],
)
    