load("@rules_python//python:defs.bzl", "py_library", "py_wheel")
load("@pypi//:requirements.bzl", "requirement")

# Defining a python library. We will package this library as a wheel
py_library(
    name = "qr", 
    deps = [
        requirement("qrcode"),
    ], 
    srcs = [
        "main.py",
    ], 
    imports = ["."],
    visibility = ["//visibility:public"],
)
    