load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")

# Defining a python library. We will package this library as a wheel
py_library(
    name = "translate", 
    deps = [
        "@sync_venv_darwin//tqdm",
        "@sync_venv_darwin//deep_translator",
    ], 
    srcs = [
        "translate/__init__.py",
        "translate/main.py",
    ], 
    imports = ["."],
    visibility = ["//visibility:public"],
)

# Package some specific py_library targets, without their dependencies
py_wheel(
    name = "translate_whl",
    # Package data. We're building "translate-1.0.0-py3-none-any.whl"
    distribution = "translate",
    python_tag = "py3",
    version = "1.0.0",
    deps = [
        ":translate",
    ],
    strip_path_prefixes = ["projects/translate",],
)
    