ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "3.2.8",
)
use_repo(ruby, "ruby")
ruby.bundle_fetch(
    name = "bundle",
    gem_checksums = {
        "chef-utils-19.1.164": "7c69ad7a8e6e1632c21d8026fbae7ae2363ee7fd9810b102fa00908d0f66fc65",
        "concurrent-ruby-1.3.6": "6b56837e1e7e5292f9864f34b69c5a2cbc75c0cf5338f1ce9903d10fa762d5ab",
        "kramdown-2.4.0": "b62e5bcbd6ea20c7a6730ebbb2a107237856e14f29cebf5b10c876cc1a2481c5",
        "kramdown-parser-gfm-1.1.0": "fb39745516427d2988543bf01fc4cf0ab1149476382393e0e9c48592f6581729",
        "mdl-0.15.0": "5fb62937cf49b3130a6cd0296981f55a8596bf559e65273d346a800ff57cfdf5",
        "mixlib-cli-2.1.8": "e6f27be34d580f6ed71731ca46b967e57793a627131c1f6e1ed2dad39ea3bdf9",
        "mixlib-config-3.0.27": "d7748b1898e4f16502afec1de00b5ad65c6de405114b1b0c65ec61b1a9100148",
        "mixlib-shellout-3.4.10": "7c8a6c5a6c90922a8871ed682129c19c9b1a514eedea2e867077229e6a415f0c",
        "rexml-3.4.4": "19e0a2c3425dfbf2d4fc1189747bdb2f849b6c5e74180401b15734bc97b5d142",
        "tomlrb-2.0.4": "262f77947ac3ac9b3366a0a5940ecd238300c553e2e14f22009e2afcd2181b99",
    },
    gemfile = "//toolchains/ruby:Gemfile",
    gemfile_lock = "//toolchains/ruby:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")
