rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.0"],
)
use_repo(rust, "rust_toolchains")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "anyhow",
    version = "1.0.77",
    # git = "https://github.com/rust-lang/crates.io-index",
)
crate.from_specs(
    name = "crates",
    cargo_lockfile = "//toolchains/rust:Cargo.lock",
    supported_platform_triples = [
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "x86_64-pc-windows-msvc",
    ],
)
use_repo(crate, "crates")